Change previous fix to -3px and xoverflow hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,8 @@
 font-family: 'Roboto', sans-serif; */
 
 body{
-    margin-right: 1px;
+    margin-right: -3px;
+    overflow-x: hidden;
 }
 
 
